@@ -1,0 +1,28 @@
+/*-------------------------------------------------------------------------
+ *
+ *   FILE
+ *	pqxx/version.hxx
+ *
+ *   DESCRIPTION
+ *      libpqxx version description.
+ *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/version instead.
+ *
+ * Copyright (c) 2009, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ *
+ * See COPYING for copyright license.  If you did not receive a file called
+ * COPYING with this source code, please notify the distributor of this mistake,
+ * or contact the author.
+ *
+ *-------------------------------------------------------------------------
+ */
+#ifndef PQXX_H_VERSION
+
+/// Full libpqxx version string.
+#define PQXX_VERSION "@PQXXVERSION@"
+
+/// Major version number for this libpqxx release.
+#define PQXX_VERSION_MAJOR @PQXX_MAJOR@
+
+/// Minor version number for this libpqxx release.
+#define PQXX_VERSION_MINOR @PQXX_MINOR@
+#endif
